2003-02-02  Alexandre Duret-Lutz  <adl@gnu.org>

	* automake.in (vars_scanned): Move near traverse_variable_recursively.
	(traverse_variable_recursively,
	traverse_variable_recursively_worker): Accept a $COND_FILTER argument
	to filter out conditions during recursion.  Don't recurse into
	undefined variables.  Don't pass empty results to &FUN_COLLECT.
	(value_to_list): Remove, was used by
	variable_value_as_list_recursive_worker only.
	(variable_value_as_list_recursive_worker): Rewrite using
	traverse_variable_recursively.  Remove the $parent argument.
	(variable_value_as_list_recursive,
	variable_loc_and_value_as_list_recursive): Adjust calls
	to variable_value_as_list_recursive_worker.  Don't reset
	%vars_scanned.
	* tests/cond3.test: Don't expect empty helper variables,
	we don't output them anymore.
	* tests/cond30.test: Use an undefined variable.

	* automake.in (handle_programs): Strip $(EXEEXT) before
	calling &check_canonical_spelling.
	* tests/exeext.test: Make sure we don't use a
	maude3__EXEEXT__OBJECTS variable.

2003-02-02  Jeremy Nimmer  <jwnimmer@alum.mit.edu>  (tiny change)

	For Debian Bug #39542:
	* automake.texi (Invoking Automake, Optional): Document how
	AC_CONFIG_AUX_DIR interacts with missing files.

2003-02-02  Alexandre Duret-Lutz  <adl@gnu.org>

	* lib/Automake/DisjConditions.pm (_permutations_worker)
	(permutations): Remove, so that people aren't tempted to use it.
	* lib/Automake/tests/DisjConditions.pl (tests_permutations): Remove.

	* automake.in (variable_conditions_recursive): Remove.
	(variable_conditionally_defined): Rewrite using
	traverse_variable_recursively.

	* automake.in (traverse_variable_recursively,
	traverse_variable_recursively_worker): Pass one merged Condition
	instead of a stack of conditions to &FUN_STORE and &FUN_COLLECT.
	(transform_variable_recursively, define_objects_from_sources)
	(handle_lib_objects, variable_conditions_recursive): Adjust usage.

2003-02-01  Alexandre Duret-Lutz  <adl@gnu.org>
