@@ -184,6 +184,7 @@ Ronald Landheer		ronald@landheer.com
 Rusty Ballinger		rusty@rlyeh.engr.sgi.com
 Ryan T. Sammartino	ryants@shaw.ca
 Sam Hocevar		sam@zoy.org
+Sander Niemeijer	niemeijer@science-and-technology.nl
 Sergey Vlasov		vsu@mivlgu.murom.ru
 Seth Alves		alves@hungry.com
 Shuhei Amakawa		sa264@cam.ac.uk
