@@ -1,3 +1,11 @@
+2003-02-04  Alexandre Duret-Lutz  <adl@gnu.org>
+
+	* m4/init.m4 (_AC_AM_CONFIG_HEADER_HOOK): Recompute
+	indexes of header files so we create stamp files with
+	the right numbers when config.status is run on some headers.
+	* tests/stamph2.test: Check for this.
+	Reported by Sander Niemeijer.
+
 2003-02-02  Alexandre Duret-Lutz  <adl@gnu.org>
 
 	* automake.in (vars_scanned): Move near traverse_variable_recursively.
